--- a/portfolio.html
+++ b/portfolio.html
@@ -7,10 +7,11 @@
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
-    <header>
+    <header class="header container">
         <nav>
             <a class="logo" href="/">
                 <span class="logo-web">Web</span>Studio
@@ -33,7 +34,7 @@
     <!--Портфолио-->
     <main>
             <!--Фильтр-->
-            <section  class="section">
+            <section  class="section container">
                 <h2 class="section-title">Фильтры</h2>
                 <ul>
                     <li><button class="button" type="button">Все</button></li>
@@ -126,16 +127,18 @@
            
     </main>
 
-    <footer>
-        <!--Адресс-->
-        <a class="logo" href="/"> <span class="logo-web">Web</span>Studio</a>
-        <address class="address-footer">
-            <ul>
-                <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
-                <li><a href="mailto:info@devstudio.com" class="auth-nav-footer">info@example.com</a></li>
-                <li><a href="tel:+380991111111" class="auth-nav-footer">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
+    <footer class="footer">
+        <div class="container">
+            <!--Адресс-->
+            <a class="logo" href="/"> <span class="logo-web">Web</span>Studio</a>
+            <address class="address-footer">
+                <ul>
+                    <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
+                    <li><a href="mailto:info@devstudio.com" class="auth-nav-footer">info@example.com</a></li>
+                    <li><a href="tel:+380991111111" class="auth-nav-footer">+38 099 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
     
 </body>
