--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                 <span class="logo-web">Web</span>Studio
             </a>
             <ul class="site-nav">
-                <li><a href="index.html" class="site-nav-link link current">Студия</a></li>
-                <li><a href="portfolio.html" class="site-nav-link link">Портфолио</a></li>
-                <li><a href="" class="site-nav-link link">Контакты</a></li>
+                <li class="site-nav-item"><a href="index.html" class="site-nav-link link current">Студия</a></li>
+                <li class="site-nav-item"><a href="portfolio.html" class="site-nav-link link">Портфолио</a></li>
+                <li class="site-nav-item"><a href="" class="site-nav-link link">Контакты</a></li>
             </ul>
         </nav>
 
         <ul class="auth-nav list">
-            <li><a href="mailto:info@devstudio.com" class="auth-nav-link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a></li>
+            <li class="auth-nav-item"><a href="mailto:info@devstudio.com" class="auth-nav-link">info@devstudio.com</a></li>
+            <li class="auth-nav-item"><a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a></li>
         </ul>
 
     </header>
@@ -38,7 +38,7 @@
 
         <section class="hero">
             <div class="hero-container container">
-                <h1 class="hero-title">Эффективные решения <br>для вашего бизнеса</h1>
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button class="hero-button" type="button">Заказать услугу</button>
             </div>
         </section>
@@ -49,22 +49,22 @@
             <div class="container">
                 <h2 class="section-title">Особенности</h2>
                 <ul class="feature-list">
-                    <li>
+                    <li class="feature-box">
                         <h3 class="feature-title">Внимание к деталям</h3>
                         <p class="feature-text">Идейные соображения, а также начало повседневной работы по формированию
                             позиции.</p>
                     </li>
-                    <li>
+                    <li class="feature-box">
                         <h3 class="feature-title">Пунктуальность</h3>
                         <p class="feature-text">Задача организации, в особенности же рамки и место обучения кадров влечет за
                             собой.</p>
                     </li>
-                    <li>
+                    <li class="feature-box">
                         <h3 class="feature-title">Планирование</h3>
                         <p class="feature-text">Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
-                    <li>
+                    <li class="feature-box">
                         <h3 class="feature-title">Современные технологии</h3>
                         <p class="feature-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                         </p>
@@ -76,7 +76,7 @@
         <section class="work">
             <div class="container">
             <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul>
+            <ul class="work-cards">
                 <li>
                     <img src="./image/img(1).jpg" alt="Разработка плана за компьютером" width="370">
 
@@ -97,7 +97,7 @@
         <section class="team">
             <div class="container">
             <h2 class="section-title">Наша команда</h2>
-            <ul>
+            <ul class="team-cards">
                 <li>
                     <img src="./image/фото1.jpg" alt="Улыбчивий мужчина в очках" width="270">
                     <h3 class="title-el">Игорь Демьяненко</h3>
@@ -127,7 +127,7 @@
         <footer class="footer">
             <div class="container">
                 <!--Адресс-->
-                <a class="logo" href="/"> <span class="logo-web">Web</span>Studio</a>
+                <a class="logo" href="/"> <span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
                 <address class="address-footer">
                     <ul>
                         <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
