оформляє головну стор. і футер

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!--Особенности-->
         <section class="feature">
             <div class="container">
-                <h2 class="section-title">Особенности</h2>
+                <h2">Особенности</h2>
                 <ul class="feature-list">
                     <li class="feature-box">
                         <h3 class="feature-title">Внимание к деталям</h3>
@@ -77,16 +77,16 @@
             <div class="container">
             <h2 class="section-title">Чем мы занимаемся</h2>
             <ul class="work-cards">
-                <li>
+                <li class="work-item">
                     <img src="./image/img(1).jpg" alt="Разработка плана за компьютером" width="370">
 
                 </li>
 
-                <li>
+                <li class="work-item">
                     <img src="./image/img(2).jpg" alt="Поддержка через елефон" width="370">
                 </li>
 
-                <li>
+                <li class="work-item">
                     <img src="./image/img(3).jpg" alt="Поддержка через планшет" width="370">
 
                 </li>
@@ -98,25 +98,33 @@
             <div class="container">
             <h2 class="section-title">Наша команда</h2>
             <ul class="team-cards">
-                <li>
-                    <img src="./image/фото1.jpg" alt="Улыбчивий мужчина в очках" width="270">
-                    <h3 class="title-el">Игорь Демьяненко</h3>
-                    <p class="title-el-text">Product Designer</p>
+                <li class="team-item">
+                    <div class="team-box">
+                        <img src="./image/фото1.jpg" alt="Улыбчивий мужчина в очках" width="270">
+                        <h3 class="title-el">Игорь Демьяненко</h3>
+                        <p class="title-el-text">Product Designer</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="./image/фото2.jpg" alt="Светловолосая девушка" width="270">
-                    <h3 class="title-el">Ольга Репина</h3>
-                    <p class="title-el-text">Frontend Developer</p>
+                <li class="team-item">
+                    <div class="team-box">
+                        <img src="./image/фото2.jpg" alt="Светловолосая девушка" width="270">
+                        <h3 class="title-el">Ольга Репина</h3>
+                        <p class="title-el-text">Frontend Developer</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="./image/фото3.jpg" alt="Улыбчивый парень в рубашке" width="270">
-                    <h3 class="title-el">Николай Тарасов</h3>
-                    <p class="title-el-text">Marketing</p>
+                <li class="team-item">
+                    <div class="team-box">
+                        <img src="./image/фото3.jpg" alt="Улыбчивый парень в рубашке" width="270">
+                        <h3 class="title-el">Николай Тарасов</h3>
+                        <p class="title-el-text">Marketing</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="./image/фото4.jpg" alt="Увереный в себе мужчина" width="270">
-                    <h3 class="title-el">Михаил Ермаков</h3>
-                    <p class="title-el-text">UI Designer</p>
+                <li class="team-item">
+                    <div class="team-box">
+                        <img src="./image/фото4.jpg" alt="Увереный в себе мужчина" width="270">
+                        <h3 class="title-el">Михаил Ермаков</h3>
+                        <p class="title-el-text">UI Designer</p>
+                    </div>
 
                 </li>
                 </div>
@@ -127,9 +135,9 @@
         <footer class="footer">
             <div class="container">
                 <!--Адресс-->
-                <a class="logo" href="/"> <span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+                <a class="footer-logo logo" href="/"> <span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
                 <address class="address-footer">
-                    <ul>
+                    <ul class="footer-item">
                         <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
                         <li><a href="mailto:info@devstudio.com" class="auth-nav-footer">info@example.com</a></li>
                         <li><a href="tel:+380991111111" class="auth-nav-footer">+38 099 111 11 11</a></li>
