--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
     <main>
             <!--Фильтр-->
             <section  class="section-container container">
-                <h2 class="section-title">Фильтры</h2>
+                <h2>Фильтры</h2>
                 <ul class="button-filter">
                     <li class="filter-item"><button class="button" type="button">Все</button></li>
                     <li class="filter-item"><button class="button" type="button">Веб-сайты</button></li>
@@ -129,9 +129,9 @@
     <footer class="footer">
         <div class="container">
             <!--Адресс-->
-            <a class="logo" href="/"> <span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+            <a class="footer-logo logo" href="/"> <span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
             <address class="address-footer">
-                <ul>
+                <ul class="footer-item">
                     <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
                     <li><a href="mailto:info@devstudio.com" class="auth-nav-footer">info@example.com</a></li>
                     <li><a href="tel:+380991111111" class="auth-nav-footer">+38 099 111 11 11</a></li>
