--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!--Особенности-->
         <section class="feature">
             <div class="container">
-                <h2">Особенности</h2>
+                <h2 class="hidden">Особенности</h2>
                 <ul class="feature-list">
                     <li class="feature-box">
                         <h3 class="feature-title">Внимание к деталям</h3>
@@ -74,7 +74,7 @@
         </section>
 
         <section class="work">
-            <div class="container">
+            <div class="container work">
             <h2 class="section-title">Чем мы занимаемся</h2>
             <ul class="work-cards">
                 <li class="work-item">
@@ -96,44 +96,54 @@
 
         <section class="team">
             <div class="container">
-            <h2 class="section-title">Наша команда</h2>
-            <ul class="team-cards">
-                <li class="team-item">
+                <h2 class="section-title">Наша команда</h2>
+                <ul class="team-cards">
+                    <li class="team-item">
                     <div class="team-box">
-                        <img src="./image/фото1.jpg" alt="Улыбчивий мужчина в очках" width="270">
-                        <h3 class="title-el">Игорь Демьяненко</h3>
-                        <p class="title-el-text">Product Designer</p>
-                    </div>
-                </li>
-                <li class="team-item">
-                    <div class="team-box">
-                        <img src="./image/фото2.jpg" alt="Светловолосая девушка" width="270">
-                        <h3 class="title-el">Ольга Репина</h3>
-                        <p class="title-el-text">Frontend Developer</p>
-                    </div>
-                </li>
-                <li class="team-item">
-                    <div class="team-box">
-                        <img src="./image/фото3.jpg" alt="Улыбчивый парень в рубашке" width="270">
-                        <h3 class="title-el">Николай Тарасов</h3>
-                        <p class="title-el-text">Marketing</p>
-                    </div>
-                </li>
-                <li class="team-item">
-                    <div class="team-box">
-                        <img src="./image/фото4.jpg" alt="Увереный в себе мужчина" width="270">
-                        <h3 class="title-el">Михаил Ермаков</h3>
-                        <p class="title-el-text">UI Designer</p>
+                        <img class="team-img" src="./image/фото1.jpg" alt="Улыбчивий мужчина в очках" width="270">
+                        <div class="team-border">
+                            <h3 class="title-el">Игорь Демьяненко</h3>
+                            <p class="title-el-text">Product Designer</p>
+                        </div>
                     </div>
 
-                </li>
-                </div>
-            </ul>
+                    </li>
+                    <li class="team-item">
+                    <div class="team-box">
+                        <img class="team-img" src="./image/фото2.jpg" alt="Светловолосая девушка" width="270">
+                        <div class="team-border">
+                            <h3 class="title-el">Ольга Репина</h3>
+                            <p class="title-el-text">Frontend Developer</p>
+                        </div>
+                    </div>
+
+                    </li>
+                    <li class="team-item">
+                    <div class="team-box">
+                        <img class="team-img" src="./image/фото3.jpg" alt="Улыбчивый парень в рубашке" width="270">
+                        <div class="team-border">
+                            <h3 class="title-el">Николай Тарасов</h3>
+                            <p class="title-el-text">Marketing</p>
+                        </div>
+                    </div>
+                    </li>
+
+                    <li class="team-item">
+                    <div class="team-box">
+                        <img class="team-img" src="./image/фото4.jpg" alt="Увереный в себе мужчина" width="270">
+                        <div class="team-border">
+                            <h3 class="title-el">Михаил Ермаков</h3>
+                            <p class="title-el-text">UI Designer</p>
+                        </div>
+                    </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
         <footer class="footer">
-            <div class="container">
+            <div class="footer container">
                 <!--Адресс-->
                 <a class="footer-logo logo" href="/"> <span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
                 <address class="address-footer">
