Исправляет ошибки дз

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="header-blok">
-      <section class="header container">
+      <div class="header container">
             <nav class="main-nav">
                 <a class="logo" href="/">
                     <span class="logo-web">Web</span>Studio
@@ -31,7 +31,7 @@
                 <li class="auth-nav-item"><a href="mailto:info@devstudio.com" class="auth-nav-link">info@devstudio.com</a></li>
                 <li class="auth-nav-item"><a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a></li>
             </ul>
-      </section>
+      </div>
 
     </header>
 
@@ -39,7 +39,7 @@
         <!--Герой-->
 
         <section class="hero">
-            <div class="hero-container container">
+            <div class="container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button class="hero-button" type="button">Заказать услугу</button>
             </div>
@@ -76,9 +76,9 @@
         </section>
 
         <section class="work">
-            <div class="container work">
-            <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul class="work-cards">
+            <div class="container">
+              <h2 class="section-title">Чем мы занимаемся</h2>
+             <ul class="work-cards">
                 <li class="work-item">
                     <img src="./image/img(1).jpg" alt="Разработка плана за компьютером" width="370">
 
@@ -92,7 +92,7 @@
                     <img src="./image/img(3).jpg" alt="Поддержка через планшет" width="370">
 
                 </li>
-            </ul>
+                 </ul>
             </div>
         </section>
 
@@ -145,14 +145,14 @@
     </main>
 
         <footer class="footer">
-            <div class="footer container">
+            <div class="container">
                 <!--Адресс-->
                 <a class="footer-logo logo" href="/"> <span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
                 <address class="address-footer">
                     <ul class="footer-item">
                         <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
                         <li><a href="mailto:info@devstudio.com" class="auth-nav-footer">info@example.com</a></li>
-                        <li><a href="tel:+380991111111" class="auth-nav-footer">+38 099 111 11 11</a></li>
+                        <li><a href="tel:+380991111111" class="tel-nav-footer">+38 099 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
