Исправляет ссылки на блок

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
         <!--Особенности-->
-        <section class="feature">
+        <section class="section">
             <div class="container">
                 <h2 class="hidden">Особенности</h2>
                 <ul class="feature-list">
@@ -75,7 +75,7 @@
             </div>
         </section>
 
-        <section class="work">
+        <section class="section section-work">
             <div class="container">
               <h2 class="section-title">Чем мы занимаемся</h2>
              <ul class="work-cards">
@@ -96,48 +96,40 @@
             </div>
         </section>
 
-        <section class="team">
+        <section class="team section">
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team-cards">
                     <li class="team-item">
-                    <div class="team-box">
                         <img class="team-img" src="./image/фото1.jpg" alt="Улыбчивий мужчина в очках" width="270">
                         <div class="team-border">
                             <h3 class="title-el">Игорь Демьяненко</h3>
                             <p class="title-el-text">Product Designer</p>
                         </div>
-                    </div>
 
                     </li>
                     <li class="team-item">
-                    <div class="team-box">
                         <img class="team-img" src="./image/фото2.jpg" alt="Светловолосая девушка" width="270">
                         <div class="team-border">
                             <h3 class="title-el">Ольга Репина</h3>
                             <p class="title-el-text">Frontend Developer</p>
                         </div>
-                    </div>
 
                     </li>
                     <li class="team-item">
-                    <div class="team-box">
                         <img class="team-img" src="./image/фото3.jpg" alt="Улыбчивый парень в рубашке" width="270">
                         <div class="team-border">
                             <h3 class="title-el">Николай Тарасов</h3>
                             <p class="title-el-text">Marketing</p>
                         </div>
-                    </div>
                     </li>
 
                     <li class="team-item">
-                    <div class="team-box">
                         <img class="team-img" src="./image/фото4.jpg" alt="Увереный в себе мужчина" width="270">
                         <div class="team-border">
                             <h3 class="title-el">Михаил Ермаков</h3>
                             <p class="title-el-text">UI Designer</p>
                         </div>
-                    </div>
                     </li>
                 </ul>
             </div>
@@ -151,8 +143,8 @@
                 <address class="address-footer">
                     <ul class="footer-item">
                         <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
-                        <li><a href="mailto:info@devstudio.com" class="auth-nav-footer">info@example.com</a></li>
-                        <li><a href="tel:+380991111111" class="tel-nav-footer">+38 099 111 11 11</a></li>
+                        <li class="address-nav"><a href="mailto:info@devstudio.com" class="auth-nav-footer">info@example.com</a></li>
+                        <li class="address-nav"><a href="tel:+380991111111" class="tel-nav-footer">+38 099 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
